[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thordata-langchain-tools"
version = "0.1.0"
description = "LangChain tools powered by Thordata (SERP + Universal Scraping)."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
  {name = "Thordata Team", email = "support@thordata.com"}
]
dependencies = [
  "thordata-sdk>=0.3.1",
  "langchain>=0.3.0",        # adjustable
  "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Thordata/thordata-langchain-tools"
"Source" = "https://github.com/Thordata/thordata-langchain-tools"